--- a/css/media.scss
+++ b/css/media.scss
@@ -66,7 +66,24 @@
     .Organic_Wrapper .Main-Filler-content .Filler-Treatment .Filler-content figure img {
         max-width: 62%;
     }
+    .Slimming_Wrapper .Slimming-grid_wrp .Service_content .Grid_wrp {
+        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)) !important; 
+    }
     // ----Organic----end--here----
+    .Slimming_Wrapper .Slimming-grid_wrp .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::before {
+         left: -19px;
+        top: -63px; 
+    }
+    .Slimming_Wrapper .Slimming-grid_wrp .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::after {
+        right: -19px;
+        bottom: -63px;  
+    }
+    .Slimming_Wrapper .Slimming-grid_wrp .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt h2 {
+        font-size: 1.2em; 
+    }
+    .Slimming_Wrapper .Slimming-grid_wrp .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt p {
+        font-size: 14px; 
+    }
 }
 
 @media only screen  and(max-width:1300px){
@@ -233,6 +250,14 @@
 } 
 
 @media only screen  and(max-width:1024px){ 
+    .Slimming_Wrapper .Slimming-grid_wrp .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::before {
+        left: -85px;
+        top: -63px;
+    }
+    .Slimming_Wrapper .Slimming-grid_wrp .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::after {
+        right: -85px;
+        bottom: -63px;
+    }
     .main-bar {
         right: 40px;
         top: 27px;
@@ -751,6 +776,14 @@
     header .Nav-wrp nav .logo a img {
         max-width: 100%;
     }
+    .Slimming_Wrapper .breadcumb-wrp{
+        display: block;
+        .ul1{width: 70%!important;text-align: left;}
+        .ul2{width: 25%!important;}
+        ul{
+            li{a{font-size: 14px;}}
+        }
+    }
     main header .Nav-wrp nav .nav-item {
         width: 65%;
         padding: .1rem 0 .5rem;
@@ -881,6 +914,7 @@
     // ---Sliminnng---page--//
     .Slimming_Wrapper .Slimming-Banner .Banner_Content{
         padding: 3rem 0 0;
+        height: 200px;
     }
     .Slimming_Wrapper .Slimming-Banner .Banner_Content .Banner_child h1 {
         font-size: 2em;
@@ -1094,9 +1128,23 @@
         top: -22px;
         right: 72px;
     }
+    .Enquery_Wrp{
+        display: $none!important;
+    }
+    .breadcrumb{
+        display: $none!important;
+    }
 }
 
 @media only screen and (max-width: 576px){
+    .Slimming_Wrapper .breadcumb-wrp{
+        display: block;
+        .ul1{width: 100%!important;text-align: justify;}
+        .ul2{width: 25%!important;display: none!important;}
+        ul{
+            li{a{font-size: 14px;}}
+        }
+    }
     header .top-social-bar .child-wrp .L1 p{ 
         display: flex;
         align-items: center;
@@ -1926,6 +1974,26 @@
     }
 }
 
+@media only screen and(max-width:414px){
+    main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::before {
+        left: -32px;
+        top: -114px;
+    } 
+    main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::after {
+        right: -35px;
+        bottom: -112px;
+    }
+    main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01:hover .grid-hvr-content .Hvr_cnt::after {
+        width: 130px;
+        height: 130px;
+    }
+    main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01:hover .grid-hvr-content .Hvr_cnt::before {
+        width: 130px;
+        height: 130px;
+    }
+    
+}
+
 @media only screen and(max-width:375px){
     header .Nav-wrp nav .logo {
         width: 60%;
@@ -2104,19 +2172,19 @@
     }
     .BT-top {
         right: 18px;
-        bottom: 46px;
+        bottom: 29px;
     }
     main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content .Banner_child {
         width: 70%;
     }
     .wtsapp-sticky-wrp a {
-        width: 41px;
-        height: 40px;
-        bottom: 124px; 
-        box-shadow: 0px 0px 2px 2px #4caf50;
+        width: 45px;
+        height: 45px;
+        // bottom: 124px; 
+        // box-shadow: 0px 0px 2px 2px #4caf50;
     }
     .wtsapp-sticky-wrp a .my-float {
-        font-size: 28px;
+        // font-size: 28px;
     }
     // -----Slimming--page-----//
     .Slimming_Wrapper .Slimming-Banner {
@@ -2125,9 +2193,10 @@
     }
     .Slimming_Wrapper .Slimming-Banner .Banner_Content {
         padding: 1rem 0 0;
+        height: 110px;
     }
     .Slimming_Wrapper .Slimming-Banner .Banner_Content .Banner_child h1 {
-        font-size: 1em;
+        font-size: 1.2em;
         text-shadow: 1px 1px 1px #00000057;
     }
     .Slimming_Wrapper .Slimming-Banner .Banner_Content .Banner_child .breadcrumb li a {
@@ -2260,6 +2329,17 @@
     .Scalp_Wrapper .Slimming-Banner .Banner_Content .Banner_child .breadcrumb {
         padding: 0.1rem 0 0;
     }
-
+    .Slimming_Wrapper .breadcumb-wrp .sub-breadc-cnt .ul1{
+        li {
+            &:nth-child(1){
+                a{
+                    font-size: 1.06em;
+                    padding: 0 0 .5rem;
+                    line-height: 1.5;
+                    display: block;
+                }
+            } 
+        }
+    }
     // ----end---here---Scalpp--
 }
