--- a/css/style.scss
+++ b/css/style.scss
@@ -89,6 +89,7 @@
                         font-weight: $bld!important;
                         font-size: 1em;
                         color: $white;
+                        a{ color: $white;   font-family: 'RobotoBold';}
                         i{
                             padding: .5rem.5rem;
                             font-size: 1.1em;
