--- a/css/style.scss
+++ b/css/style.scss
@@ -1707,9 +1707,9 @@
             display: none;
         }
     }
-    .Weight-Content-wrp {
-        display: none;
-    }
+    // .Weight-Content-wrp {
+    //     display: none;
+    // }
 }
 .Weight-Loss_Wrapper{
     // ----Weight---Loss---//
