--- a/css/media.scss
+++ b/css/media.scss
@@ -2341,5 +2341,12 @@
             } 
         }
     }
+
+    .Slimming_Wrapper .breadcumb-wrp {
+        width: 100%;
+        padding: .5rem .5rem;
+        background: #F73624;
+        display: none;
+    }
     // ----end---here---Scalpp--
 }
