--- a/css/style.css
+++ b/css/style.css
@@ -5738,5 +5738,11 @@ main footer .copyright_wrp .copy_content p {
     line-height: 1.5;
     display: block;
   }
+  .Slimming_Wrapper .breadcumb-wrp {
+    width: 100%;
+    padding: .5rem .5rem;
+    background: #F73624;
+    display: none;
+  }
 }
 /*# sourceMappingURL=style.css.map */
