--- a/css/style.scss
+++ b/css/style.scss
@@ -242,7 +242,7 @@
                                    }
                                 //    .list1:hover .Sub_Hvr_wrp{display: none!important;} 
                                   .Sub_Hvr_wrp2,.Sub_Hvr_wrp3,.Sub_Hvr_wrp4,.Sub_Hvr_wrp5
-                                  ,.Sub_Hvr_wrp6,.Sub_Hvr_wrp7,.Sub_Hvr_wrp8,.Sub_Hvr_wrp9{
+                                  ,.Sub_Hvr_wrp6,.Sub_Hvr_wrp7,.Sub_Hvr_wrp8,.Sub_Hvr_wrp9,.Sub_Hvr_wrp10,.Sub_Hvr_wrp11{
                                     display: none;
                                    }
                                    .Sub_cmn{
@@ -347,7 +347,7 @@
                                     }
                                     .sub-cmn01{ 
                                        ul{
-                                           display: block!important;
+                                        //    display: block!important;
                                            li{
                                                padding: .7rem 0;
                                                a{
@@ -2618,6 +2618,15 @@
     }
 }
 
+
+ 
+
+.Filler_Wrapper .Grid-item4{
+    display: block!important;
+}
+.Filler_Wrapper .Grid-item3{
+    display: none!important;
+}
 
 .main-bar{
     display: none;
