--- a/css/style.css
+++ b/css/style.css
@@ -332,7 +332,7 @@ header .Nav-wrp nav .nav-item .Unorder_wrp .drop2 .Child_drop2 li a:hover {
   color: #646464 !important;
 }
 
-header .Nav-wrp nav .nav-item .Unorder_wrp .drop2 .Child_drop2 .Sub_Hvr_wrp2, header .Nav-wrp nav .nav-item .Unorder_wrp .drop2 .Child_drop2 .Sub_Hvr_wrp3, header .Nav-wrp nav .nav-item .Unorder_wrp .drop2 .Child_drop2 .Sub_Hvr_wrp4, header .Nav-wrp nav .nav-item .Unorder_wrp .drop2 .Child_drop2 .Sub_Hvr_wrp5, header .Nav-wrp nav .nav-item .Unorder_wrp .drop2 .Child_drop2 .Sub_Hvr_wrp6, header .Nav-wrp nav .nav-item .Unorder_wrp .drop2 .Child_drop2 .Sub_Hvr_wrp7, header .Nav-wrp nav .nav-item .Unorder_wrp .drop2 .Child_drop2 .Sub_Hvr_wrp8, header .Nav-wrp nav .nav-item .Unorder_wrp .drop2 .Child_drop2 .Sub_Hvr_wrp9 {
+header .Nav-wrp nav .nav-item .Unorder_wrp .drop2 .Child_drop2 .Sub_Hvr_wrp2, header .Nav-wrp nav .nav-item .Unorder_wrp .drop2 .Child_drop2 .Sub_Hvr_wrp3, header .Nav-wrp nav .nav-item .Unorder_wrp .drop2 .Child_drop2 .Sub_Hvr_wrp4, header .Nav-wrp nav .nav-item .Unorder_wrp .drop2 .Child_drop2 .Sub_Hvr_wrp5, header .Nav-wrp nav .nav-item .Unorder_wrp .drop2 .Child_drop2 .Sub_Hvr_wrp6, header .Nav-wrp nav .nav-item .Unorder_wrp .drop2 .Child_drop2 .Sub_Hvr_wrp7, header .Nav-wrp nav .nav-item .Unorder_wrp .drop2 .Child_drop2 .Sub_Hvr_wrp8, header .Nav-wrp nav .nav-item .Unorder_wrp .drop2 .Child_drop2 .Sub_Hvr_wrp9, header .Nav-wrp nav .nav-item .Unorder_wrp .drop2 .Child_drop2 .Sub_Hvr_wrp10, header .Nav-wrp nav .nav-item .Unorder_wrp .drop2 .Child_drop2 .Sub_Hvr_wrp11 {
   display: none;
 }
 
@@ -493,10 +493,6 @@ header .Nav-wrp nav .nav-item .Unorder_wrp .drop2 .Child_drop2 .sub-drop01 ul .l
 header .Nav-wrp nav .nav-item .Unorder_wrp .drop2 .Child_drop2 .sub-drop01 ul li a {
   font-weight: bold;
   font-size: 1em;
-}
-
-header .Nav-wrp nav .nav-item .Unorder_wrp .drop2 .Child_drop2 .sub-cmn01 ul {
-  display: block !important;
 }
 
 header .Nav-wrp nav .nav-item .Unorder_wrp .drop2 .Child_drop2 .sub-cmn01 ul li {
@@ -3441,6 +3437,14 @@ main footer .copyright_wrp .copy_content p {
   color: #000;
 }
 
+.Filler_Wrapper .Grid-item4 {
+  display: block !important;
+}
+
+.Filler_Wrapper .Grid-item3 {
+  display: none !important;
+}
+
 .main-bar {
   display: none;
 }
@@ -5741,6 +5745,22 @@ main footer .copyright_wrp .copy_content p {
   .Slimming_Wrapper .breadcumb-wrp {
     width: 100%;
     padding: .5rem .5rem;
+  }
+  .Slimming_Wrapper .Main-content-Wrapper .Weight-Loss_Wrapper .Spt-thrpy .Spot-cnt h3 {
+    font-size: 15px;
+  }
+  .Slimming_Wrapper .Main-content-Wrapper .Weight-Loss_Wrapper .Spt-thrpy .Spot-cnt ul li {
+    font-size: 15px;
+  }
+  .Slimming_Wrapper .Main-content-Wrapper .Weight-Loss_Wrapper .Spt-thrpy .Spot-cnt p {
+    font-size: 15px;
+  }
+  .Slimming_Wrapper .Main-content-Wrapper .Weight-Loss_Wrapper .Weight-Loss {
+    padding: 0rem 0 0rem;
+  }
+  .permanentMakeup_Wrapper .Main-premanent_wrp .permanent-service .Slim_content ul li {
+    font-size: 14px;
+    line-height: 1.5;
   }
 }
 /*# sourceMappingURL=style.css.map */
