--- a/css/style.css
+++ b/css/style.css
@@ -3437,6 +3437,14 @@ main footer .copyright_wrp .copy_content p {
   color: #000;
 }
 
+.Slimming_Wrapper .Main-content-Wrapper .Weight-Loss_Wrapper .Weight-heading h3 {
+  display: none;
+}
+
+.Slimming_Wrapper .Main-content-Wrapper .Weight-Loss_Wrapper .Weight-heading h4 {
+  display: none;
+}
+
 .Filler_Wrapper .Grid-item4 {
   display: block !important;
 }
