--- a/css/style.scss
+++ b/css/style.scss
@@ -2618,8 +2618,12 @@
     }
 }
 
-
- 
+.Slimming_Wrapper .Main-content-Wrapper .Weight-Loss_Wrapper .Weight-heading h3{
+    display: none;
+}
+.Slimming_Wrapper .Main-content-Wrapper .Weight-Loss_Wrapper .Weight-heading h4{
+    display: none;
+}
 
 .Filler_Wrapper .Grid-item4{
     display: block!important;
