--- a/css/style.css
+++ b/css/style.css
@@ -2467,9 +2467,9 @@ main footer .copyright_wrp .copy_content p {
 }
 
 .Slimming_Wrapper .Slimming-grid_wrp .Service_content .Grid-item2 {
-  background: url(../image/grid02.png) no-repeat;
+  background: url(../image/Gridskin.png) no-repeat;
   background-size: cover;
-  background-position: revert;
+  background-position: center;
   height: 300px;
 }
 
@@ -3450,6 +3450,39 @@ main footer .copyright_wrp .copy_content p {
 }
 
 .Filler_Wrapper .Grid-item3 {
+  display: none !important;
+}
+
+.BodyTreatment_Wrapper .Grid-item2, .SkinTreatment_Wrapper .Grid-item2 {
+  display: none !important;
+}
+
+.BodyTreatment_Wrapper .Grid-item3, .SkinTreatment_Wrapper .Grid-item3 {
+  display: block !important;
+}
+
+.BodyTreatment_Wrapper .Grid-item5 {
+  display: block !important;
+}
+
+.HairLaser-Wrapper .Grid-item5, .HairPigment_Wrapper .Grid-item5, .Scalp_Wrapper .Grid-item5, .HairTransplant_Wrapper .Grid-item5, .PrpHair_Wrapper .Grid-item5 {
+  display: none !important;
+}
+
+.HairLaser-Wrapper .Grid-item3, .HairPigment_Wrapper, .Scalp_Wrapper .Grid-item5,
+.HairTransplant_Wrapper .Grid-item3, .PrpHair_Wrapper .Grid-item3 {
+  display: block !important;
+}
+
+.Botox_Wrapper .Grid-item3 {
+  display: none !important;
+}
+
+.Botox_Wrapper .Grid-item5 {
+  display: block !important;
+}
+
+.permanentMakeup_Wrapper .Grid-item1 {
   display: none !important;
 }
 
