--- a/css/media.scss
+++ b/css/media.scss
@@ -754,6 +754,9 @@
 }
 
 @media only screen and(max-width:767px){
+    header .Nav-wrp nav .nav-item .Unorder_wrp .drop_down li{
+        a{width: 100%;height: 100%;}
+    }
     header .top-social-bar .child-wrp{
         justify-content: center!important;
         text-align: center;
@@ -1671,7 +1674,7 @@
         top: 29px; 
     }
     .myHeader {
-        top: 79px;
+        top: 84px;
     }
     main .Service_wrapper .Service_content .Grid-item1 {  
         background-position: revert;
@@ -2271,7 +2274,7 @@
         padding: 0 0 .4rem; 
     }
     .Thread_Wrapper .Thread-left-wrp .key-wrp .key01 h3 {
-        font-size: 1em; 
+        font-size: 15px; 
         padding: 0 0 .4rem; 
     }
     .Filler_Wrapper .Main-Filler-content .Filler-Treatment .filler-heading h2 {
@@ -2303,6 +2306,7 @@
     }
     .Filler_Wrapper .Main-Filler-content .Benefit_Wrapper .Benefit-heading h2 {
         font-size: 1em;
+        padding: .7rem 0;
     }
     
     // ------Filllers----page----end--here---
