--- a/css/style.scss
+++ b/css/style.scss
@@ -5,7 +5,7 @@
     }
     body{
     font-size: 15px;
-    color: #2c3e50; background: #fff;
+    color: #000000; background: #fff;
     font-family: 'RalewayRegular';
     line-height: 1.5;
     }
@@ -209,6 +209,8 @@
                                   font-weight: 500; 
                                   display: inline-block;
                                   transition: $transition;
+                                  width: 100%;
+                                  height: 100%;
                                   &:hover{
                                       color: $white!important;
                                       transition: $transition;
@@ -1742,8 +1744,8 @@
         margin-bottom: 1.5rem;
         //background: $red;
         border-radius: 5px;
-        background: #ffffff87;
-        border: 1px solid #00000038;
+        background: #ffffff;//#ffffff87;
+        border: 1px solid #0000000f;//#00000038;
         h2{
             @include heading;
             text-align: left;
@@ -1884,6 +1886,7 @@
              figure{
                  img{
                     max-width: 50%; 
+                    animation: imganime 3s linear infinite;
                 }
             } 
         }
@@ -1952,9 +1955,9 @@
 ///-===============Fillers----page-------//
 .Filler_Wrapper{
     .Filler-Banner{
-        background: url(../image/banner-filler.png) no-repeat!important;
+        background: url(../image/banner-filler1.png) no-repeat!important;
         background-size: cover!important;
-        background-position-y: -200px!important;
+        background-position-y: cover!important;
     }
     .Main-Filler-content{
         .Filler-Service{
@@ -2004,6 +2007,7 @@
                 figure{
                     img{
                         max-width: 50%;
+                        animation: imganime 3s linear infinite;
                     }
                 }
             }
@@ -2271,6 +2275,7 @@
                 text-align: right;
                 img{
                     max-width: 64%!important;
+                    animation: imganime 3s linear infinite;
                 }
             }
             figure.grl-aftr {
@@ -2448,6 +2453,7 @@
                         figure{
                            img{
                             max-width: 100%;
+                            animation: imganime 3s linear infinite;
                            }
                         }
                     }
@@ -2642,11 +2648,11 @@
     display: block !important;
 }
  
-.HairLaser-Wrapper .Grid-item5,.HairPigment_Wrapper .Grid-item5, .Scalp_Wrapper .Grid-item5
+.HairLaser-Wrapper .Grid-item5,.HairPigment_Wrapper .Grid-item5, .Scalp_Wrapper .Grid-item5 
 ,.HairTransplant_Wrapper .Grid-item5,.PrpHair_Wrapper .Grid-item5{
     display: none!important;
 }
-.HairLaser-Wrapper .Grid-item3,.HairPigment_Wrapper, .Scalp_Wrapper .Grid-item5,
+.HairLaser-Wrapper .Grid-item3,.HairPigment_Wrapper, .Scalp_Wrapper .Grid-item3,  
 .HairTransplant_Wrapper .Grid-item3,.PrpHair_Wrapper .Grid-item3{
     display: block !important;
 }
@@ -2661,7 +2667,9 @@
     display: none!important;
 }
 
-
+.permanentMakeup_Wrapper .Grid-item3{
+    display: block!important;
+}
 
 .main-bar{
     display: none;
