--- a/css/style.scss
+++ b/css/style.scss
@@ -2670,6 +2670,17 @@
 .permanentMakeup_Wrapper .Grid-item3{
     display: block!important;
 }
+.BodyTreatment_Wrapper {
+    .Grid-item5 {
+        display: block!important;
+    }
+    .hair-trn-Cnt01{
+        p{
+            padding: 0 0 0 0!important;
+            text-align: justify;
+        }
+    }
+}
 
 .main-bar{
     display: none;
